--- a/cppreference/tests/CMakeLists.txt
+++ b/cppreference/tests/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.25)
 project(cppreference LANGUAGES CXX)
 
 # C++23
-set(CMAKE_CXX_COMPILER "clang++-19")
+set(CMAKE_CXX_COMPILER "clang++-19" CACHE STRING "C++ compiler")
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
@@ -17,7 +17,8 @@ file(GLOB TEST_SOURCES CONFIGURE_DEPENDS "*.cpp")
 
 include(GoogleTest)
 add_executable(test_main ${TEST_SOURCES})
-target_compile_options(test_main PRIVATE "-Wall -g3")
+target_compile_options(test_main PRIVATE -Wall -g3)
+target_link_options(test_main PRIVATE -Wl,-rpath,/usr/local/lib64)
 
 target_link_libraries(test_main PRIVATE GTest::gtest GTest::gtest_main)
 gtest_discover_tests(test_main)
